--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+
+   
     <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta
+    name="author"
+    content="Juan Pablo Rojas Usuga,juanpablor629@gmail.com"
+    />
+    <meta name="description" content=" soy juan pablo te invito a Explora mi portafolio , mostrando una variedad de proyectos de diseño y desarrollo web innovadores y creativos."/>
+    <meta name="keywords" content="Desarrollo web, Diseño web, Portafolio digital, Proyectos de diseño, Proyectos de desarrollo, Desarrollador frontend, Diseñador web, HTML, CSS, JavaScript, Diseño responsivo, UX/UI, react, TypesCript"/>
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin 
+    />
+
     <link rel="shortcut icon" href="/ToolsImages/icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
